--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .App {
   text-align: center;
 }
@@ -33,13 +31,12 @@ body {
   color: #61dafb;
 }
 .container-main {
-  box-shadow: 1px 1px 2px 2px;
 }
 
-.title{
+.title {
   text-transform: capitalize;
   color: white;
-  font-family: 'Nunito';
+  font-family: "Nunito";
   font-size: 3rem;
 }
 
@@ -56,8 +53,7 @@ body {
   border: solid orange;
 }
 
-.bord{
-
+.bord {
   border: solid orange;
   border-radius: 1%;
   background-color: white;
